Update and rename general-error.html to index.html
update file name

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
 
- @file              : general-error.html
+ @file              : index.html
  @author            : Scott Grimes
  @organization      : Cortez Labs LLC
  @copyright         : Copyright (c) 2021-2030 by Cortez Labs LLC. All Rights Reserved.
