--- a/index.html
+++ b/index.html
@@ -181,8 +181,7 @@
             <p id="errorMessage">We're experiencing some technical difficulties right now. Our team has been notified and is working on a fix.</p>
             
             <div class="buttons">
-                <a href="/" class="btn">Go Home</a>
-                <a href="javascript:window.location.reload();" class="btn secondary">Try Again</a>
+                <a href="https://orcaforce.co" class="btn secondary">Try Again</a>
             </div>
         </div>
     </div>
